--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "expo": "~54.0.18",
     "expo-status-bar": "~3.0.8",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-svg": "^15.14.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.9.2"
   },
   "private": true
